--- a/mizuxe/index.html
+++ b/mizuxe/index.html
@@ -14,7 +14,299 @@
 
 <body>
   <!-- START HERE -->
-  
+  <nav class="navbar navbar-expand-md navbar-light fixed-top py-4">
+    <div class="container">
+      <a href="#home" class="navbar-brand">
+        <img src="img/mlogo.png" alt="" width="50" height="50">
+        <h3 class="d-inline align-middle">Mizuxe</h3>
+      </a>
+      <button class="navbar-toggler" data-toggler="collpase" data-target="#navbarCollapse">
+        <span class="navbar-toggler-icon"></span>
+      </button>
+      <div id="navbarCollapse" class="collapse navbar-collapse">
+        <ul class="navbar-nav ml-auto">
+          <li class="nav-item">
+            <a href="#home" class="nav-link">Home</a>
+          </li>
+          <li class="nav-item">
+            <a href="#about" class="nav-link">About</a>
+          </li>
+          <li class="nav-item">
+            <a href="#authors" class="nav-link">Authors</a>
+          </li>
+          <li class="nav-item">
+            <a href="#contact" class="nav-link">Contact</a>
+          </li>
+        </ul>
+      </div>
+    </div>
+  </nav>
+
+  <!-- showcase -->
+  <section id="showcase" class="py-5">
+    <div class="primary-overlay text-white">
+      <div class="container">
+        <div class="row">
+          <div class="col-lg-6 text-center">
+            <h1 class="display-2 mt-2 pt-5">
+              Do What You Dream Of ...
+            </h1>
+            <p class="lead">Lorem ipsum dolor sit, amet consectetur adipisicing elit. Ipsa, doloribus!</p>
+            <a href="#" class="btn btn-outline-secondary btn-lg text-white"><i class="fas fa-arrow-right"></i> Read More</a>
+          </div>
+          <div class="col-lg-6">
+            <img src="img/book.png" alt="" class="img-fluid d-none d-lg-block">
+          </div>
+        </div>
+      </div>
+    </div>
+  </section>
+
+  <!-- newletter -->
+  <section id="newsletter" class="bg-dark text-white py-5">
+    <div class="container">
+      <div class="row">
+        <div class="col-md-4">
+          <input type="text" class="form-control form-control-lg mb-resp" placeholder="Enter name">
+        </div>
+        <div class="col-md-4">
+          <input type="email" class="form-control form-control-lg mb-resp" placeholder="Enter email">
+        </div>
+        <div class="col-md-4">
+          <button class="btn btn-primary btn-lg btn-block">
+            <i class="fas fa-envelope-open-o"></i>Subscribe
+          </button>
+        </div>
+      </div>
+    </div>
+  </section>
+
+  <!-- boxes -->
+  <section id="boxes" class="py-5">
+    <div class="container">
+      <div class="row">
+        <div class="col-md-3">
+          <div class="card text-center border-primary mb-resp">
+            <div class="card-body">
+              <h3 class="text-primary">Be Better</h3>
+              <p class="text-muted">Lorem ipsum, dolor sit amet consectetur adipisicing elit. Quidem, placeat?</p>
+            </div>
+          </div>
+        </div>
+        <div class="col-md-3">
+          <div class="card text-center bg-primary text-white mb-resp">
+            <div class="card-body">
+              <h3>Be Smarter</h3>
+              <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Quidem, placeat?</p>
+            </div>
+          </div>
+        </div>
+        <div class="col-md-3">
+          <div class="card text-center border-primary mb-resp">
+            <div class="card-body">
+              <h3 class="text-primary">Be Faster</h3>
+              <p class="text-muted">Lorem ipsum, dolor sit amet consectetur adipisicing elit. Quidem, placeat?</p>
+            </div>
+          </div>
+        </div>
+        <div class="col-md-3">
+          <div class="card text-center bg-primary text-white">
+            <div class="card-body">
+              <h3>Be Stronger</h3>
+              <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Quidem, placeat?</p>
+            </div>
+          </div>
+        </div>
+      </div>
+    </div>
+  </section>
+
+  <!-- about -->
+  <section id="about" class="py-5 text-center bg-light">
+    <div class="container">
+      <div class="row">
+        <div class="col">
+          <div class="info-header mb-5">
+            <h1 class="text-primary pb-3">Why This Book?</h1>
+            <p class="lead pb-3">Lorem ipsum dolor sit amet consectetur adipisicing elit. Quasi quaerat voluptas recusandae numquam nostrum veniam.</p>
+          </div>
+          <div id="accordion">
+            <div class="card">
+              <div class="card-header">
+                <h5 class="mb-0">
+                  <div href="#collapse1" data-toggle="collapse" data-parent="#accordion">
+                    <i class="fas fa-arrow-circle-down"></i> Get Inspired
+                  </div>
+                </h5>
+              </div>
+              <div id="collapse1" class="collapse show">
+                <div class="card-body">
+                  Lorem ipsum dolor sit, amet consectetur adipisicing elit. Dolorem quis quo, quasi consequuntur distinctio explicabo illum consectetur nam praesentium perferendis ab natus harum facilis eum culpa accusantium aliquam reiciendis quas! Dicta qui ea, vero libero iusto totam, molestiae repudiandae at, sint cumque porro. Asperiores reprehenderit, tempora vero sint rerum in?
+                </div>
+              </div>
+            </div>
+
+            <div class="card">
+              <div class="card-header">
+                <h5 class="mb-0">
+                  <div href="#collapse2" data-toggle="collapse" data-parent="#accordion">
+                    <i class="fas fa-arrow-circle-down"></i> Gain The Knowledge
+                  </div>
+                </h5>
+              </div>
+              <div id="collapse2" class="collapse">
+                <div class="card-body">
+                  Lorem ipsum dolor sit, amet consectetur adipisicing elit. Dolorem quis quo, quasi consequuntur distinctio explicabo illum consectetur nam praesentium perferendis ab natus harum facilis eum culpa accusantium aliquam reiciendis quas! Dicta qui ea, vero libero iusto totam, molestiae repudiandae at, sint cumque porro. Asperiores reprehenderit, tempora vero sint rerum in?
+                </div>
+              </div>
+            </div>
+
+            <div class="card">
+              <div class="card-header">
+                <h5 class="mb-0">
+                  <div href="#collapse3" data-toggle="collapse" data-parent="#accordion">
+                    <i class="fas fa-arrow-circle-down"></i> Open Your Mind
+                  </div>
+                </h5>
+              </div>
+              <div id="collapse3" class="collapse">
+                <div class="card-body">
+                  Lorem ipsum dolor sit, amet consectetur adipisicing elit. Dolorem quis quo, quasi consequuntur distinctio explicabo illum consectetur nam praesentium perferendis ab natus harum facilis eum culpa accusantium aliquam reiciendis quas! Dicta qui ea, vero libero iusto totam, molestiae repudiandae at, sint cumque porro. Asperiores reprehenderit, tempora vero sint rerum in?
+                </div>
+              </div>
+            </div>
+          </div>
+
+        </div>
+      </div>
+    </div>
+  </section>
+
+  <!-- authors -->
+  <section id="authors" class="my-5 text-center">
+    <div class="container">
+      <div class="row">
+        <div class="col">
+          <div class="info-header mb-5">
+            <h1 class="text-primary pb-3">
+              Meet The Authors
+            </h1>
+            <p class="lead">Lorem ipsum dolor, sit amet consectetur adipisicing elit. Tempore id autem eaque rem, porro provident.</p>
+          </div>
+        </div>
+      </div>
+      <div class="row">
+        <div class="col-lg-3 col-md-6">
+          <div class="card">
+            <div class="card-body">
+              <img src="img/person1.jpg" alt="" class="img-fluid rounded-circle w-50 mb-3">
+              <h3>Susan Williams</h3>
+              <h5 class="text-muted">Lead Writer</h5>
+              <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Adipisci cum pariatur eos deleniti repudiandae corrupti.</p>
+              <div class="d-flex justify-content-center">
+                <div class="p-4">
+                  <a href="https://facebook.com">
+                    <i class="fab fa-facebook"></i>
+                  </a>
+                </div>
+                <div class="p-4">
+                  <a href="https://twitter.com">
+                    <i class="fab fa-twitter"></i>
+                  </a>
+                </div>
+                <div class="p-4">
+                  <a href="https://instagram.com">
+                    <i class="fab fa-instagram"></i>
+                  </a>
+                </div>
+              </div>
+            </div>
+          </div>
+        </div>
+        <div class="col-lg-3 col-md-6">
+          <div class="card">
+            <div class="card-body">
+              <img src="img/person2.jpg" alt="" class="img-fluid rounded-circle w-50 mb-3">
+              <h3>Joan Kitton</h3>
+              <h5 class="text-muted">Co-Writer</h5>
+              <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Adipisci cum pariatur eos deleniti repudiandae corrupti.</p>
+              <div class="d-flex justify-content-center">
+                <div class="p-4">
+                  <a href="https://facebook.com">
+                    <i class="fab fa-facebook"></i>
+                  </a>
+                </div>
+                <div class="p-4">
+                  <a href="https://twitter.com">
+                    <i class="fab fa-twitter"></i>
+                  </a>
+                </div>
+                <div class="p-4">
+                  <a href="https://instagram.com">
+                    <i class="fab fa-instagram"></i>
+                  </a>
+                </div>
+              </div>
+            </div>
+          </div>
+        </div>
+        <div class="col-lg-3 col-md-6">
+          <div class="card">
+            <div class="card-body">
+              <img src="img/person3.jpg" alt="" class="img-fluid rounded-circle w-50 mb-3">
+              <h3>John Smith</h3>
+              <h5 class="text-muted">Editor</h5>
+              <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Adipisci cum pariatur eos deleniti repudiandae corrupti.</p>
+              <div class="d-flex justify-content-center">
+                <div class="p-4">
+                  <a href="https://facebook.com">
+                    <i class="fab fa-facebook"></i>
+                  </a>
+                </div>
+                <div class="p-4">
+                  <a href="https://twitter.com">
+                    <i class="fab fa-twitter"></i>
+                  </a>
+                </div>
+                <div class="p-4">
+                  <a href="https://instagram.com">
+                    <i class="fab fa-instagram"></i>
+                  </a>
+                </div>
+              </div>
+            </div>
+          </div>
+        </div>
+        <div class="col-lg-3 col-md-6">
+          <div class="card">
+            <div class="card-body">
+              <img src="img/person4.jpg" alt="" class="img-fluid rounded-circle w-50 mb-3">
+              <h3>Kevin Soanson</h3>
+              <h5 class="text-muted">Designer</h5>
+              <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Adipisci cum pariatur eos deleniti repudiandae corrupti.</p>
+              <div class="d-flex justify-content-center">
+                <div class="p-4">
+                  <a href="https://facebook.com">
+                    <i class="fab fa-facebook"></i>
+                  </a>
+                </div>
+                <div class="p-4">
+                  <a href="https://twitter.com">
+                    <i class="fab fa-twitter"></i>
+                  </a>
+                </div>
+                <div class="p-4">
+                  <a href="https://instagram.com">
+                    <i class="fab fa-instagram"></i>
+                  </a>
+                </div>
+              </div>
+            </div>
+          </div>
+        </div>
+      </div>
+    </div>
+  </section>
 
   <script src="http://code.jquery.com/jquery-3.3.1.min.js" integrity="sha256-FgpCb/KJQlLNfOu91ta32o/NMZxltwRo8QtmkMRdAu8="
     crossorigin="anonymous"></script>
