--- a/glozzom/index.html
+++ b/glozzom/index.html
@@ -5,10 +5,11 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
-  <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.0.13/css/all.css" integrity="sha384-DNOHZ68U8hZfKXOrtjWvjxusGo9WQnrNx2sqG0tfsghAvtVlRW3tvkXWZh58N9jp"
-    crossorigin="anonymous">
-  <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.1/css/bootstrap.min.css" integrity="sha384-WskhaSGFgHYWDcbwN70/dfYBj47jz9qbsMId/iRN3ewGhXQFZCSftd1LZCfmhktB"
-    crossorigin="anonymous">
+  <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.0.13/css/all.css"
+    integrity="sha384-DNOHZ68U8hZfKXOrtjWvjxusGo9WQnrNx2sqG0tfsghAvtVlRW3tvkXWZh58N9jp" crossorigin="anonymous">
+  <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.1/css/bootstrap.min.css"
+    integrity="sha384-WskhaSGFgHYWDcbwN70/dfYBj47jz9qbsMId/iRN3ewGhXQFZCSftd1LZCfmhktB" crossorigin="anonymous">
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/ekko-lightbox/5.3.0/ekko-lightbox.css">
   <link rel="stylesheet" href="css/style.css">
   <title>Bootstrap Theme</title>
 </head>
@@ -55,7 +56,8 @@
           <div class="container">
             <div class="carousel-caption d-none d-sm-block text-right mb-5">
               <h1 class="display-3">Heading One</h1>
-              <p class="lead">Lorem, ipsum dolor sit amet consectetur adipisicing elit. Obcaecati, est molestiae unde ex ducimus quos neque veritatis odio quaerat facilis?</p>
+              <p class="lead">Lorem, ipsum dolor sit amet consectetur adipisicing elit. Obcaecati, est molestiae unde ex
+                ducimus quos neque veritatis odio quaerat facilis?</p>
               <a href="" class="btn btn-danger btn-lg">Sing Up Now!</a>
             </div>
           </div>
@@ -64,7 +66,8 @@
           <div class="container">
             <div class="carousel-caption d-none d-sm-block mb-5">
               <h1 class="display-3">Heading Two</h1>
-              <p class="lead">Lorem, ipsum dolor sit amet consectetur adipisicing elit. Obcaecati, est molestiae unde ex ducimus quos neque veritatis odio quaerat facilis?</p>
+              <p class="lead">Lorem, ipsum dolor sit amet consectetur adipisicing elit. Obcaecati, est molestiae unde ex
+                ducimus quos neque veritatis odio quaerat facilis?</p>
               <a href="" class="btn btn-primary btn-lg">Learn More</a>
             </div>
           </div>
@@ -73,7 +76,8 @@
           <div class="container">
             <div class="carousel-caption d-none d-sm-block text-right mb-5">
               <h1 class="display-3">Heading Three</h1>
-              <p class="lead">Lorem, ipsum dolor sit amet consectetur adipisicing elit. Obcaecati, est molestiae unde ex ducimus quos neque veritatis odio quaerat facilis?</p>
+              <p class="lead">Lorem, ipsum dolor sit amet consectetur adipisicing elit. Obcaecati, est molestiae unde ex
+                ducimus quos neque veritatis odio quaerat facilis?</p>
               <a href="" class="btn btn-warning btn-lg">Get Discount!</a>
             </div>
           </div>
@@ -118,7 +122,8 @@
         <div class="col">
           <div class="container pt-5">
             <h1>Are You Ready To Get Started?</h1>
-            <p class="d-none d-md-block">Lorem ipsum dolor sit amet consectetur adipisicing elit. Magni, dignissimos distinctio. Tenetur obcaecati doloremque soluta enim, dolor architecto nam minima?</p>
+            <p class="d-none d-md-block">Lorem ipsum dolor sit amet consectetur adipisicing elit. Magni, dignissimos
+              distinctio. Tenetur obcaecati doloremque soluta enim, dolor architecto nam minima?</p>
           </div>
         </div>
       </div>
@@ -131,8 +136,9 @@
       <div class="row">
         <div class="col-md-6 align-self-center">
           <h3>Lorem Ipsum</h3>
-          <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Libero id quae magni consectetur alias accusantium velit laborum mollitia nemo quia.</p>
-            <a href="about.html" class="btn btn-outline-danger btn-large">Learn More</a>
+          <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Libero id quae magni consectetur alias accusantium
+            velit laborum mollitia nemo quia.</p>
+          <a href="about.html" class="btn btn-outline-danger btn-large">Learn More</a>
         </div>
         <div class="col-md-6">
           <img src="img/laptop.png" alt="" class="img-fluid">
@@ -141,14 +147,125 @@
     </div>
   </section>
 
+  <!-- video section section -->
+  <section id="video-play">
+    <div class="dark-overlay">
+      <div class="row">
+        <div class="col">
+          <div class="container p-5">
+            <a href="#" class="video" data-video="https://www.youtube.com/embed/wZR6QFE2m6o" data-toggle="modal"
+              data-target="#videoModal">
+              <i class="fas fa-play fa-3x"></i>
+            </a>
+            <h1>See What We Do</h1>
+          </div>
+        </div>
+      </div>
+    </div>
+  </section>
 
-  <script src="http://code.jquery.com/jquery-3.3.1.min.js" integrity="sha256-FgpCb/KJQlLNfOu91ta32o/NMZxltwRo8QtmkMRdAu8="
-    crossorigin="anonymous"></script>
-  <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.3/umd/popper.min.js" integrity="sha384-ZMP7rVo3mIykV+2+9J3UJ46jBk0WLaUAdn689aCwoqbBJiSnjAK/l8WvCWPIPm49"
-    crossorigin="anonymous"></script>
-  <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.1.1/js/bootstrap.min.js" integrity="sha384-smHYKdLADwkXOn1EmN1qk/HfnUcbVRZyYmZ4qpPea6sjB/pTJ0euyQp0Mk8ck+5T"
-    crossorigin="anonymous"></script>
+  <!-- phote gallery -->
+  <section id="gallery" class="py-5">
+    <div class="container">
+      <h1 class="text-center">Photo Gallery</h1>
+      <p class="text-center">Check out our photos</p>
+      <div class="row mb-4">
+        <div class="col-md-4">
+          <a href="https://source.unsplash.com/random/560x560" data-toggle="lightbox" data-gallery="img-gallery"
+            data-height="560" data-width="560">
+            <img src="https://source.unsplash.com/random/560x560" alt="" class="img-fluid"></a>
+        </div>
 
+        <div class="col-md-4">
+          <a href="https://source.unsplash.com/random/561x561" data-toggle="lightbox" data-gallery="img-gallery"
+            data-height="561" data-width="561">
+            <img src="https://source.unsplash.com/random/561x561" alt="" class="img-fluid"></a>
+        </div>
+
+        <div class="col-md-4">
+          <a href="https://source.unsplash.com/random/562x562" data-toggle="lightbox" data-gallery="img-gallery"
+            data-height="562" data-width="562">
+            <img src="https://source.unsplash.com/random/562x562" alt="" class="img-fluid"></a>
+        </div>
+      </div>
+
+      <div class="row mb-4">
+        <div class="col-md-4">
+          <a href="https://source.unsplash.com/random/563x563" data-toggle="lightbox" data-gallery="img-gallery"
+            data-height="563" data-width="563">
+            <img src="https://source.unsplash.com/random/563x563" alt="" class="img-fluid"></a>
+        </div>
+
+        <div class="col-md-4">
+          <a href="https://source.unsplash.com/random/564x564" data-toggle="lightbox" data-gallery="img-gallery"
+            data-height="564" data-width="564">
+            <img src="https://source.unsplash.com/random/564x564" alt="" class="img-fluid"></a>
+        </div>
+
+        <div class="col-md-4">
+          <a href="https://source.unsplash.com/random/565x565" data-toggle="lightbox" data-gallery="img-gallery"
+            data-height="565" data-width="565">
+            <img src="https://source.unsplash.com/random/565x565" alt="" class="img-fluid"></a>
+        </div>
+      </div>
+
+    </div>
+  </section>
+
+
+  <!-- newsletter -->
+  <section id="newsletter" class="text-center p-5 bg-dark text-white">
+    <div class="container">
+      <div class="row">
+        <div class="col">
+          <h1>Sign Up For Out Newsletter</h1>
+          <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Reiciendis, alias nostrum? Magni dignissimos voluptatum sunt illum sequi labore fugiat ipsam!</p>
+          <form class="form-inline justify-content-center">
+            <input type="text" class="form-control mb-2 mr-2" placeholder="Enter Your Name">
+            <input type="email" class="form-control mb-2 mr-2" placeholder="Enter Your Email">
+            <button class="btn-primary mb-2">Submit</button>
+          </form>
+        </div>
+      </div>
+    </div>
+  </section>
+
+<!-- footer -->
+<section id="main-footer" class="text-center p-4">
+  <div class="container">
+    <div class="row">
+      <div class="col">
+        <p>Copyright &copy; <span id="year"></span>Glozzom</p>
+      </div>
+    </div>
+  </div>
+</section>
+
+
+  <!-- video modal -->
+  <div id="videoModal" class="modal fade">
+    <div class="modal-dialog">
+      <div class="modal-content">
+        <div class="modal-body">
+          <button class="close" data-dismiss="modal">
+            <span>&times;</span>
+          </button>
+          <iframe src="" frameborder="0" height="350" width="100%" allowfullscreen></iframe>
+        </div>
+      </div>
+    </div>
+  </div>
+
+
+  <script src="http://code.jquery.com/jquery-3.3.1.min.js"
+    integrity="sha256-FgpCb/KJQlLNfOu91ta32o/NMZxltwRo8QtmkMRdAu8=" crossorigin="anonymous"></script>
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.3/umd/popper.min.js"
+    integrity="sha384-ZMP7rVo3mIykV+2+9J3UJ46jBk0WLaUAdn689aCwoqbBJiSnjAK/l8WvCWPIPm49"
+    crossorigin="anonymous"></script>
+  <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.1.1/js/bootstrap.min.js"
+    integrity="sha384-smHYKdLADwkXOn1EmN1qk/HfnUcbVRZyYmZ4qpPea6sjB/pTJ0euyQp0Mk8ck+5T" crossorigin="anonymous">
+    </script>
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/ekko-lightbox/5.3.0/ekko-lightbox.js"></script>
   <script>
     // Get the current year for the copyright
     $('#year').text(new Date().getFullYear());
@@ -158,6 +275,29 @@
       interval: 5000,
       pause: 'hover',
     });
+
+    //lightbox init
+    $(document).on('click', '[data-toggle="lightbox"]', function (event) {
+      event.preventDefault();
+      $(this).ekkoLightbox();
+    });
+
+
+    //video play
+    $(function () {
+      //auto play modal video
+      $(".video").click(function () {
+        var theModal = $(this).data("target"),
+          videoSRC = $(this).attr("data-video"),
+          videoSRCauto = videoSRC + "?modestbranding=1&rel=0&controls=0&showinfo=0&html5=1&autoplay=1";
+        $(theModal + ' iframe').attr('src', videoSRCauto);
+        $(theModal + ' button.close').click(function () {
+          $(theModal + ' iframe').attr('src', videoSRC);
+        });
+      });
+    });
+
+
   </script>
 </body>
 
