--- a/blogen/posts.html
+++ b/blogen/posts.html
@@ -35,10 +35,10 @@
         <div class="collapse navbar-collapse" id="navbarCollapse">
           <ul class="navbar-nav">
             <li class="nav-item px-2">
-              <a href="index.html" class="nav-link active">Dashboard</a>
+              <a href="index.html" class="nav-link">Dashboard</a>
             </li>
             <li class="nav-item px-2">
-              <a href="posts.html" class="nav-link">Posts</a>
+              <a href="posts.html" class="nav-link active">Posts</a>
             </li>
             <li class="nav-item px-2">
               <a href="categories.html" class="nav-link">Categories</a>
@@ -76,49 +76,28 @@
     </nav>
 
     <!-- header -->
-    <header id="main-header" class="py-2 bg-primary text-white">
+    <header id="main-header" class="py-2 bg-danger text-white">
       <div class="container">
         <div class="row">
           <div class="col-md-6">
-            <h1><i class="fas fa-cog"></i> Dashboard</h1>
+            <h1><i class="fas fa-pencil-alt"></i> Posts</h1>
           </div>
         </div>
       </div>
     </header>
 
-    <!-- actions -->
-    <section id="actions" class="py-4 mb-4 bg-light">
+    <!-- search -->
+    <section id="search" class="py-4 mb-4 bg-light">
       <div class="container">
         <div class="row">
-          <div class="col-md-3">
-            <a
-              href="#"
-              class="btn btn-danger btn-block"
-              data-toggle="modal"
-              data-target="#addPostModal"
-            >
-              <i class="fas fa-plus"></i> Add Post
-            </a>
-          </div>
-          <div class="col-md-3">
-            <a
-              href="#"
-              class="btn btn-warning btn-block"
-              data-toggle="modal"
-              data-target="#addCategoryModal"
-            >
-              <i class="fas fa-plus"></i> Add Category
-            </a>
-          </div>
-          <div class="col-md-3">
-            <a
-              href="#"
-              class="btn btn-success btn-block"
-              data-toggle="modal"
-              data-target="#addUserModal"
-            >
-              <i class="fas fa-plus"></i> Add User
-            </a>
+          <div class="col-md-6 ml-auto">
+              <div class="input-group">
+                  <input type="text" class="form-control" placeholder="Search Posts...">
+                  <div class="input-group-append">
+                      <button class="btn btn-danger">Search</button>
+                  </div>
+              </div>
+
           </div>
         </div>
       </div>
@@ -128,7 +107,7 @@
     <section id="posts">
       <div class="container">
         <div class="row">
-          <div class="col-md-9">
+          <div class="col">
             <div class="card">
               <div class="card-header">
                 <h4>Latest Posts</h4>
@@ -212,35 +191,28 @@
                   </tr>
                 </tbody>
               </table>
-            </div>
-          </div>
-          <div class="col-md-3">
-            <div class="card text-center bg-danger text-white mb-3">
-              <div class="card-body">
-                <h3>Posts</h3>
-                <h4 class="display-4">
-                  <i class="fas fa-pencil-alt"></i> 6
-                </h4>
-                <a href="posts.html" class="btn btn-outline-light btn-sm">View</a>
-              </div>
-            </div>
-            <div class="card text-center bg-warning text-white mb-3">
-              <div class="card-body">
-                <h3>Categories</h3>
-                <h4 class="display-4">
-                  <i class="fas fa-folder"></i> 4
-                </h4>
-                <a href="categories.html" class="btn btn-outline-light btn-sm">View</a>
-              </div>
-            </div>
-            <div class="card text-center bg-success text-white mb-3">
-              <div class="card-body">
-                <h3>Users</h3>
-                <h4 class="display-4">
-                  <i class="fas fa-users"></i> 2
-                </h4>
-                <a href="users.html" class="btn btn-outline-light btn-sm">View</a>
-              </div>
+
+              <!-- pagination -->
+              <nav class="ml-4">
+                  <ul class="pagination">
+                      <li class="page-item disabled">
+                          <a href="#" class="page-link">Previous</a>
+                      </li>
+                      <li class="page-item active">
+                          <a href="#" class="page-link">1</a>
+                      </li>
+                      <li class="page-item">
+                          <a href="#" class="page-link">2</a>
+                      </li>
+                      <li class="page-item">
+                          <a href="#" class="page-link">3</a>
+                      </li>
+                      <li class="page-item">
+                          <a href="#" class="page-link">Next</a>
+                      </li>
+                  </ul>
+              </nav>
+
             </div>
           </div>
         </div>
@@ -265,124 +237,6 @@
 
 
 
-
-
-
-
-
-    <!-- modals -->
-    <!-- add posts modal -->
-    <div class="modal fade" id="addPostModal">
-      <div class="modal-dialog modal-lg">
-        <div class="modal-content">
-          <div class="modal-header bg-danger text-white">
-            <h5 class="modal-title">Add Post</h5>
-            <button class="close" data-dismiss="modal">
-              <span>&times;</span>
-            </button>
-          </div>
-          <div class="modal-body">
-            <form>
-              <div class="form-group">
-                <label for="title">Title</label>
-                <input type="text" class="form-control">
-              </div>
-              <div class="form-group">
-                <label for="category">Category</label>
-                <select class="form-control">
-                  <option value="">Web Development</option>
-                  <option value="">Tech Gadgets</option>
-                  <option value="">Business</option>
-                  <option value="">Health</option>
-                </select>
-              </div>
-              <div class="form-group">
-                <label for="image">Upload File</label>
-                <div class="custom-file">
-                  <input type="file" class="custom-file-input" id="image">
-                  <label for="image" class="custom-file-label">Choose File</label>
-                  <small class="form-text text-muted">Max Size 3Mb</small>
-                </div>
-                <div class="form-group">
-                  <label for="body">Body</label>
-                  <textarea name="editor1" class="form-control"></textarea>
-                </div>
-              </div>
-            </form>
-          </div>
-          <div class="modal-footer">
-            <button class="btn btn-danger" data-dismiss="modal">Save Changes</button>
-          </div>
-        </div>
-      </div>
-    </div>
-
-    <!-- add categories modal -->
-     <div class="modal fade" id="addCategoryModal">
-      <div class="modal-dialog modal-lg">
-        <div class="modal-content">
-          <div class="modal-header bg-warning text-white">
-            <h5 class="modal-title">Add Category</h5>
-            <button class="close" data-dismiss="modal">
-              <span>&times;</span>
-            </button>
-          </div>
-          <div class="modal-body">
-            <form>
-              <div class="form-group">
-                <label for="title">Title</label>
-                <input type="text" class="form-control">
-              </div>
-            </form>
-          </div>
-          <div class="modal-footer">
-            <button class="btn btn-warning" data-dismiss="modal">Save Changes</button>
-          </div>
-        </div>
-      </div>
-    </div>
-
-    <!-- add user modal -->
-     <div class="modal fade" id="addUserModal">
-      <div class="modal-dialog modal-lg">
-        <div class="modal-content">
-          <div class="modal-header bg-success text-white">
-            <h5 class="modal-title">Add User</h5>
-            <button class="close" data-dismiss="modal">
-              <span>&times;</span>
-            </button>
-          </div>
-          <div class="modal-body">
-            <form>
-              <div class="form-group">
-                <label for="name">Name</label>
-                <input type="text" class="form-control">
-              </div>
-              <div class="form-group">
-                <label for="email">Email</label>
-                <input type="email" class="form-control">
-              </div>
-              <div class="form-group">
-                <label for="password">Password</label>
-                <input type="password" class="form-control">
-              </div>
-              <div class="form-group">
-                <label for="password2">Confirm Password</label>
-                <input type="password" class="form-control">
-              </div>
-            </form>
-          </div>
-          <div class="modal-footer">
-            <button class="btn btn-success" data-dismiss="modal">Save Changes</button>
-          </div>
-        </div>
-      </div>
-    </div>
-
-
-
-
-
     <script
       src="http://code.jquery.com/jquery-3.3.1.min.js"
       integrity="sha256-FgpCb/KJQlLNfOu91ta32o/NMZxltwRo8QtmkMRdAu8="
@@ -398,12 +252,10 @@
       integrity="sha384-smHYKdLADwkXOn1EmN1qk/HfnUcbVRZyYmZ4qpPea6sjB/pTJ0euyQp0Mk8ck+5T"
       crossorigin="anonymous"
     ></script>
-    <script src="https://cdn.ckeditor.com/4.14.0/standard/ckeditor.js"></script>
 
     <script>
       // Get the current year for the copyright
       $("#year").text(new Date().getFullYear());
-      CKEDITOR.replace( 'editor1' );
     </script>
   </body>
 </html>
